Make sure expanding animation doesn't "jump" at the end

--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -369,8 +369,9 @@ span.frame {
 
 .frame > ol > li .content,
 .frame > ul > li .content {
-	padding: 0 10px 10px;
+	padding: 0 10px;
 	margin: 0 -10px;
+	width: 100%;
 }
 
 .frame > ol > li:last-of-type .content,
